Fixed resume issue

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           </div>
           <div class="btn-group mt-4">
             <a href="#projects" class="btn btn-primary btn-glow">View Projects</a>
-            <a href="images/newresume.pdf" target="_blank" class="btn btn-outline-light">View Resume</a>
+            <a href="images/resume.pdf" target="_blank" class="btn btn-outline-light">View Resume</a>
           </div>
           <div class="social-icons">
             <a href="https://github.com/jrdnmartin" target="_blank" title="GitHub" class="icon-hover">
