--- a/index.html
+++ b/index.html
@@ -371,10 +371,10 @@
           <!-- Central Card -->
           <div class="carousel-3d-card active">
             <div class="card shadow h-100">
-              <!-- <img src="images/siguccs.jpg" class="card-img-top" alt="SIGUCCS Project"> -->
-              <div class="card-img-top">
+              <img src="images/dashboard.png" class="card-img-top" alt="Weather Dashboard">
+              <!-- <div class="card-img-top">
                 WIP - No Image Available
-              </div>
+              </div> -->
               <div class="card-body">
                 <h5 class="card-title fw-bold">Weather Dashboard</h5>
                 <p class="card-text">A web app that fetches real-time weather data using the OpenWeatherMap API. Users can search for a city to view current conditions—temperature, humidity, wind speed, and a brief description—along with a 5-day forecast in a user-friendly interface, in real-time.</p>
@@ -384,10 +384,10 @@
                   <span class="badge bg-info">API</span>
                 </div>
                 <div class="card-links mt-3">
-                  <a href="#" class="btn btn-outline-primary btn-sm me-2">
+                  <a href="https://github.com/jrdnmartin/weather-dashboard" class="btn btn-outline-primary btn-sm me-2" target="_blank">
                     <i class="fab fa-github me-1"></i> View Code
                   </a>
-                  <a href="#" class="btn btn-outline-secondary btn-sm">
+                  <a href="https://weather-dashboard-git-main-jordan-martins-projects.vercel.app" class="btn btn-outline-secondary btn-sm" target="_blank">
                     <i class="fas fa-external-link-alt me-1"></i> Live Demo
                   </a>
                 </div>
