Edited main page information & added freelance subpage

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
+              <a class="nav-link" href="freelance.html">Hire Me</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#about">About</a>
             </li>
             <li class="nav-item">
@@ -64,7 +67,7 @@
     <div class="hero-content">
       <h1 data-aos="fade-right" data-aos-duration="1200">Jordan Martin</h1>
       <div class="typewriter-container" data-aos="fade-right" data-aos-duration="1200" data-aos-delay="300">
-        <h2 class="fw-light">I'm a <span class="typewriter"></span></h2>
+        <h2 class="fw-light">I'm <span class="typewriter"></span></h2>
       </div>
       <p class="lead mt-4" data-aos="fade-right" data-aos-duration="1200" data-aos-delay="500">
         AI Enthusiast | CS Student | Building the Future, One Line of Code at a Time.
@@ -97,6 +100,11 @@
     </div>
   </header>
 
+    <div class="alert alert-primary text-center my-0" role="alert" style="border-radius:0;">
+      Need a website for your business or project?
+      <a href="freelance.html" class="fw-bold text-decoration-underline">Hire me for freelance web development!</a>
+    </div>
+
     <section id="about" class="about py-5">
       <div class="container">
         <h2 class="text-center mb-5 position-relative">
@@ -115,6 +123,10 @@
                 </p>
                 <p>
                   I believe in technology's power to solve real-world problems, and I'm constantly seeking new challenges to grow both technically and personally.
+                </p>
+                <p class="mt-3">
+                  I also build websites for local companies.
+                  <a href="freelance.html" class="fw-bold text-primary text-decoration-underline">Learn about it here!</a>
                 </p>
               </div>
             </div>
@@ -498,8 +510,8 @@
         <h2>Contact Me</h2>
         <p class="text-center text-muted">Feel free to reach out for any inquiries or collaborations!</p>
         <div class="contact-info">
-          <p><i class="fas fa-phone-alt"></i> +1 630-962-2236</p>
-          <p><i class="fas fa-envelope"></i> jordan.martin@drake.edu</p>
+          <!-- <p><i class="fas fa-phone-alt"></i> +1 630-962-2236</p> -->
+          <p><i class="fas fa-envelope"></i> contact@jrdnmartin.com</p>
         </div>
         <form id="contact-form" action="https://formspree.io/f/mkgobpnr" method="POST">
           <div class="mb-3">
