Fixed placeholder info

--- a/freelance.html
+++ b/freelance.html
@@ -505,9 +505,9 @@
         </div>
         <div class="footer-section">
           <h3>Get In Touch</h3>
-          <p>Email: jordan@example.com</p>
+          <p>Email: contact@jrdnmartin.com</p>
           <p>Response Time: 24 hours</p>
-          <p>Based in Des Moines, IA</p>
+          <p>Based in Aurora, IL</p>
         </div>
       </div>
       <div class="footer-bottom">
