--- a/freelance.html
+++ b/freelance.html
@@ -445,7 +445,7 @@
         </div>
 
         <div class="contact-form scroll-reveal">
-          <form id="contactForm" action="https://formspree.io/f/mkgobpnr" method="POST">
+          <form id="contact-form" action="https://formspree.io/f/mkgobpnr" method="POST">
             <div class="form-group">
               <label for="name">Your Name *</label>
               <input type="text" id="name" name="name" required>
@@ -476,6 +476,7 @@
               Send My Free Quote Request
             </button>
           </form>
+          <p id="form-status" class="text-center mt-3 text-success" style="display: none;">Message sent successfully!</p>
         </div>
       </div>
     </div>
