adjusted navbar to hide commented sections

--- a/freelance.html
+++ b/freelance.html
@@ -16,9 +16,9 @@
       <div class="logo">Jordan M.</div>
       <ul class="nav-links">
         <li><a href="#services">Services</a></li>
-        <li><a href="#portfolio">Portfolio</a></li>
+        <!-- <li><a href="#portfolio">Portfolio</a></li> -->
         <li><a href="#process">Process</a></li>
-        <li><a href="#testimonials">Reviews</a></li>
+        <!-- <li><a href="#testimonials">Reviews</a></li> -->
       </ul>
       <a href="#contact" class="nav-cta">Start Project</a>
     </div>
