Re-arranged file structure and adjusted package pricing

--- a/freelance/index.html
+++ b/freelance/index.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet">
-  <link href="css/freelance.css" rel="stylesheet" />
+  <link href="../css/freelance.css" rel="stylesheet" />
 </head>
 <body>
   <!-- Navigation -->
@@ -118,7 +118,8 @@
         <div class="pricing-card scroll-reveal">
           <div class="pricing-header">
             <h3 class="pricing-title">Starter</h3>
-            <div class="pricing-price">$499</div>
+            <p class="pricing-starting">Plans starting at</p>
+            <div class="pricing-price">$249</div>
             <p class="pricing-description">Perfect for getting online quickly</p>
           </div>
           <ul class="pricing-features">
@@ -135,7 +136,8 @@
         <div class="pricing-card featured scroll-reveal">
           <div class="pricing-header">
             <h3 class="pricing-title">Professional</h3>
-            <div class="pricing-price">$899</div>
+            <p class="pricing-starting">Plans starting at</p>
+            <div class="pricing-price">$599</div>
             <p class="pricing-description">Everything a growing business needs</p>
           </div>
           <ul class="pricing-features">
@@ -147,13 +149,14 @@
             <li><span class="feature-icon">✓</span> 10-day delivery</li>
             <li><span class="feature-icon">✓</span> Unlimited revisions</li>
           </ul>
-          <button class="pricing-cta" onclick="scrollToContact()">Most Popular</button>
+          <button class="pricing-cta" onclick="scrollToContact()">Get Started</button>
         </div>
 
         <div class="pricing-card scroll-reveal">
           <div class="pricing-header">
             <h3 class="pricing-title">Premium</h3>
-            <div class="pricing-price">$1,499</div>
+            <p class="pricing-starting">Plans starting at</p>
+            <div class="pricing-price">$999</div>
             <p class="pricing-description">Full-featured business solution</p>
           </div>
           <ul class="pricing-features">
@@ -516,6 +519,6 @@
       </div>
     </div>
   </footer>
-  <script src="js/freelance.js"></script>
+  <script src="../js/freelance.js"></script>
 </body>
 </html>
