Additional adjustment to file structure

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="freelance/index.html">Hire Me</a>
+              <a class="nav-link" href="freelance/">Hire Me</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#about">About</a>
@@ -102,7 +102,7 @@
 
     <div class="alert alert-primary text-center my-0" role="alert" style="border-radius:0;">
       Need a website for your business or project?
-      <a href="freelance/index.html" class="fw-bold text-decoration-underline">Hire me for freelance web development!</a>
+      <a href="freelance/" class="fw-bold text-decoration-underline">Hire me for freelance web development!</a>
     </div>
 
     <section id="about" class="about py-5">
@@ -126,7 +126,7 @@
                 </p>
                 <p class="mt-3">
                   I also build websites for local companies.
-                  <a href="freelance/index.html" class="fw-bold text-primary text-decoration-underline">Learn about it here!</a>
+                  <a href="freelance/" class="fw-bold text-primary text-decoration-underline">Learn about it here!</a>
                 </p>
               </div>
             </div>
