--- a/index.html
+++ b/index.html
@@ -15,10 +15,14 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" 
       rel="stylesheet"
     />
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link href="css/styles.css" rel="stylesheet" />
-    
+
+    <link rel="icon" type="image/png" href="assets/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="assets/favicon.svg" />
+    <link rel="shortcut icon" href="assets/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png" />
+    <link rel="manifest" href="assets/site.webmanifest" />
     <title>Jordan Martin's Portfolio</title>
   </head>
   <body>
@@ -38,9 +42,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="freelance/">Hire Me</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link" href="#about">About</a>
             </li>
@@ -74,13 +78,13 @@
       </p>
       <div class="highlight-box">
         <p class="elevator-pitch">
-          Junior at Drake University with a passion for artificial intelligence 
+          Senior at Drake University with a passion for artificial intelligence 
           and a desire to create innovative solutions to complex problems.
         </p>
       </div>
       <div class="btn-group mt-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="800">
         <a href="#projects" class="btn btn-primary btn-glow">View Projects</a>
-        <a href="images/resume.pdf" target="_blank" class="btn btn-outline-light">View Resume</a>
+        <a href="images/newresume.pdf" target="_blank" class="btn btn-outline-light">View Resume</a>
       </div>
       <div class="social-icons" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1000">
         <a href="https://github.com/jrdnmartin" target="_blank" title="GitHub" class="icon-hover">
@@ -100,10 +104,10 @@
     </div>
   </header>
 
-    <div class="alert alert-primary text-center my-0" role="alert" style="border-radius:0;">
+    <!-- <div class="alert alert-primary text-center my-0" role="alert" style="border-radius:0;">
       Need a website for your business or project?
       <a href="freelance/" class="fw-bold text-decoration-underline">Hire me for freelance web development!</a>
-    </div>
+    </div> -->
 
     <section id="about" class="about py-5">
       <div class="container">
@@ -124,10 +128,10 @@
                 <p>
                   I believe in technology's power to solve real-world problems, and I'm constantly seeking new challenges to grow both technically and personally.
                 </p>
-                <p class="mt-3">
+                <!-- <p class="mt-3">
                   I also build websites for local companies.
                   <a href="freelance/" class="fw-bold text-primary text-decoration-underline">Learn about it here!</a>
-                </p>
+                </p> -->
               </div>
             </div>
           </div>
