website revision pt1

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <a class="nav-link" href="#skills">Skills</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#projects">Projects</a>
+              <a class="nav-link" href="#work">Selected Work</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
@@ -74,17 +74,16 @@
         <h2 class="fw-light">I'm <span class="typewriter"></span></h2>
       </div>
       <p class="lead mt-4" data-aos="fade-right" data-aos-duration="1200" data-aos-delay="500">
-        AI Enthusiast | CS Student | Building the Future, One Line of Code at a Time.
+        Software Engineer | Freelance Developer
       </p>
       <div class="highlight-box">
         <p class="elevator-pitch">
-          Senior at Drake University with a passion for artificial intelligence 
-          and a desire to create innovative solutions to complex problems.
+          Senior at Drake University. I design and build production-grade software — from AI-powered systems to web platforms — with a focus on reliability, clarity, and real-world impact.
         </p>
       </div>
       <div class="btn-group mt-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="800">
-        <a href="#projects" class="btn btn-primary btn-glow">View Projects</a>
-        <a href="images/newresume.pdf" target="_blank" class="btn btn-outline-light">View Resume</a>
+        <a href="#work" class="btn btn-primary btn-glow">View Selected Work</a>
+        <a href="images/2026resume.pdf" target="_blank" class="btn btn-outline-light">View Resume</a>
       </div>
       <div class="social-icons" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1000">
         <a href="https://github.com/jrdnmartin" target="_blank" title="GitHub" class="icon-hover">
@@ -386,127 +385,160 @@
         </div>
       </div>
 
-  <section id="projects" class="projects py-5">
-    <div class="container-fluid">
-      <h2 class="text-center mb-5">Projects</h2>
-      <div class="carousel-3d-container">
-        <div class="carousel-3d-inner">
-          <!-- Central Card -->
-          <div class="carousel-3d-card active">
-            <div class="card shadow h-100">
-              <img src="images/dashboard.png" class="card-img-top" alt="Weather Dashboard">
-              <!-- <div class="card-img-top">
-                WIP - No Image Available
-              </div> -->
-              <div class="card-body">
-                <h5 class="card-title fw-bold">Weather Dashboard</h5>
-                <p class="card-text">A web app that fetches real-time weather data using the OpenWeatherMap API. Users can search for a city to view current conditions—temperature, humidity, wind speed, and a brief description—along with a 5-day forecast in a user-friendly interface, in real-time.</p>
-                <div class="tech-stack">
-                  <span class="badge bg-primary">React.js</span>
-                  <span class="badge bg-success">Tailwind CSS</span>
-                  <span class="badge bg-info">API</span>
-                </div>
-                <div class="card-links mt-3">
-                  <a href="https://github.com/jrdnmartin/weather-dashboard" class="btn btn-outline-primary btn-sm me-2" target="_blank">
-                    <i class="fab fa-github me-1"></i> View Code
-                  </a>
-                  <a href="https://weather-dashboard-git-main-jordan-martins-projects.vercel.app" class="btn btn-outline-secondary btn-sm" target="_blank">
-                    <i class="fas fa-external-link-alt me-1"></i> Live Demo
-                  </a>
-                </div>
-              </div>
-            </div>
+ <section id="work" class="work-section py-5">
+  <div class="container">
+    <div class="text-center mb-5">
+      <h2 class="mb-2 work-heading">Selected Work</h2>
+      <p class="text-muted work-subtitle mx-auto">
+        A curated selection of production systems, client work, and real-world software I’ve built.
+      </p>
+    </div>
+
+    <div class="work-grid">
+
+      <!-- Archeway -->
+      <article class="work-row work-row--archeway">
+        <div class="work-visual" aria-hidden="true">
+          <div class="work-visual-inner">
+            <i class="fas fa-layer-group"></i>
+            <div class="work-visual-lines"></div>
           </div>
-  
-          <!-- Side Cards -->
-          <div class="carousel-3d-card">
-            <div class="card shadow h-100">
-              <!-- <img src="images/pixelpaws.png" class="card-img-top" alt="Pixel Paws"> -->
-              <div class="card-img-top">
-                WIP - No Image Available
-              </div>
-              <div class="card-body">
-                <h5 class="card-title fw-bold">WIP Project</h5>
-                <p class="card-text">Project Coming Soon</p>
-                <div class="tech-stack">
-                  <span class="badge bg-primary">?</span>
-                  <span class="badge bg-success">?</span>
-                  <span class="badge bg-info">?</span>
-                </div>
-                <div class="card-links mt-3">
-                  <a href="#" class="btn btn-outline-primary btn-sm me-2">
-                    <i class="fab fa-github me-1"></i> View Code
-                  </a>
-                  <a href="#" class="btn btn-outline-secondary btn-sm">
-                    <i class="fas fa-external-link-alt me-1"></i> Live Demo
-                  </a>
-                </div>
-              </div>
+        </div>
+
+        <div class="work-content">
+          <div class="work-header">
+            <div class="work-titleblock">
+              <h3 class="work-title">Archeway</h3>
+              <p class="work-kicker">Job Application Tracking Platform</p>
             </div>
+
+            <a class="work-link" href="/work/archeway/">
+              View case study <span aria-hidden="true">→</span>
+            </a>
           </div>
-  
-          <div class="carousel-3d-card">
-            <div class="card shadow h-100">
-              <!-- <img src="/api/placeholder/400/250" class="card-img-top" alt="Weather App"> -->
-              <div class="card-img-top">
-                WIP - No Image Available
-              </div>
-              <div class="card-body">
-                <h5 class="card-title fw-bold">WIP Project</h5>
-                <p class="card-text">Project Coming Soon</p>
-                <div class="tech-stack">
-                  <span class="badge bg-primary">?</span>
-                  <span class="badge bg-success">?</span>
-                  <span class="badge bg-info">?</span>
-                </div>
-                <div class="card-links mt-3">
-                  <a href="#" class="btn btn-outline-primary btn-sm me-2">
-                    <i class="fab fa-github me-1"></i> View Code
-                  </a>
-                  <a href="#" class="btn btn-outline-secondary btn-sm">
-                    <i class="fas fa-external-link-alt me-1"></i> Live Demo
-                  </a>
-                </div>
-              </div>
+
+          <p class="work-desc">
+            Designed and built a full-stack platform to help students track applications, deadlines, and progress
+            using Kanban-style workflows and analytics.
+          </p>
+
+          <div class="work-meta">
+            <div class="work-facts">
+              <span class="work-fact"><i class="fas fa-user-cog"></i> Product + Engineering</span>
+              <span class="work-fact"><i class="fas fa-rocket"></i> In Progress</span>
             </div>
-          </div>
-  
-          <div class="carousel-3d-card">
-            <div class="card shadow h-100">
-              <!-- <img src="/api/placeholder/400/250" class="card-img-top" alt="Task Manager"> -->
-              <div class="card-img-top">
-                WIP - No Image Available
-              </div>
-              <div class="card-body">
-                <h5 class="card-title fw-bold">WIP Project</h5>
-                <p class="card-text">Project Coming Soon</p>
-                <div class="tech-stack">
-                  <span class="badge bg-primary">?</span>
-                  <span class="badge bg-success">?</span>
-                  <span class="badge bg-info">?</span>
-                </div>
-                <div class="card-links mt-3">
-                  <a href="#" class="btn btn-outline-primary btn-sm me-2">
-                    <i class="fab fa-github me-1"></i> View Code
-                  </a>
-                  <a href="#" class="btn btn-outline-secondary btn-sm">
-                    <i class="fas fa-external-link-alt me-1"></i> Live Demo
-                  </a>
-                </div>
-              </div>
+
+            <div class="work-tags">
+              <span class="work-tag">React</span>
+              <span class="work-tag">Flask</span>
+              <span class="work-tag">PostgreSQL</span>
+              <span class="work-tag">Auth</span>
+              <span class="work-tag">Analytics</span>
             </div>
           </div>
         </div>
-  
-        <button class="carousel-3d-prev">
-          <i class="fas fa-chevron-left"></i>
-        </button>
-        <button class="carousel-3d-next">
-          <i class="fas fa-chevron-right"></i>
-        </button>
-      </div>
+      </article>
+
+      <!-- Restaurant Vision -->
+      <article class="work-row work-row--vision">
+        <div class="work-visual" aria-hidden="true">
+          <div class="work-visual-inner">
+            <i class="fas fa-eye"></i>
+            <div class="work-visual-lines"></div>
+          </div>
+        </div>
+
+        <div class="work-content">
+          <div class="work-header">
+            <div class="work-titleblock">
+              <h3 class="work-title">Restaurant Vision</h3>
+              <p class="work-kicker">Computer Vision System for Operations</p>
+            </div>
+
+            <a class="work-link" href="/work/restaurant-vision/">
+              View overview <span aria-hidden="true">→</span>
+            </a>
+          </div>
+
+          <p class="work-desc">
+            Developed a real-time vision pipeline to monitor floor activity and improve table awareness, reducing
+            operational blind spots.
+            <span class="work-nda">Details limited due to client confidentiality.</span>
+          </p>
+
+          <div class="work-meta">
+            <div class="work-facts">
+              <span class="work-fact"><i class="fas fa-shield-alt"></i> Private Client</span>
+              <span class="work-fact"><i class="fas fa-check-circle"></i> Deployed</span>
+            </div>
+
+            <div class="work-tags">
+              <span class="work-tag">YOLOv8</span>
+              <span class="work-tag">DeepSORT</span>
+              <span class="work-tag">Re-ID</span>
+              <span class="work-tag">Docker</span>
+              <span class="work-tag">RTSP</span>
+            </div>
+          </div>
+        </div>
+      </article>
+
+      <!-- IllinoisDrivers -->
+      <article class="work-row work-row--illinois">
+        <div class="work-visual" aria-hidden="true">
+          <div class="work-visual-inner">
+            <i class="fas fa-briefcase"></i>
+            <div class="work-visual-lines"></div>
+          </div>
+        </div>
+
+        <div class="work-content">
+          <div class="work-header">
+            <div class="work-titleblock">
+              <h3 class="work-title">IllinoisDrivers</h3>
+              <p class="work-kicker">Insurance Quoting & Automation Platform</p>
+            </div>
+
+            <a class="work-link" href="/work/illinoisdrivers/">
+              View case study <span aria-hidden="true">→</span>
+            </a>
+          </div>
+
+          <p class="work-desc">
+            Freelance development of a production insurance platform integrating dynamic quote flows, API-driven pricing,
+            and CMS-managed client content.
+          </p>
+
+          <div class="work-meta">
+            <div class="work-facts">
+              <span class="work-fact"><i class="fas fa-handshake"></i> Freelance</span>
+              <span class="work-fact"><i class="fas fa-globe"></i> Production</span>
+            </div>
+
+            <div class="work-tags">
+              <span class="work-tag">WordPress</span>
+              <span class="work-tag">APIs</span>
+              <span class="work-tag">Forms</span>
+              <span class="work-tag">Logging</span>
+              <span class="work-tag">SEO</span>
+            </div>
+          </div>
+        </div>
+      </article>
+
     </div>
-  </section>
+
+    <div class="work-footer mt-4">
+      <p class="text-muted small mb-0">
+        More work available upon request — including private client systems and internal tools.
+      </p>
+    </div>
+  </div>
+</section>
+
+
+
+
 
   <section id="contact" class="contact-section">
     <div class="container">
