website revision pt3

--- a/index.html
+++ b/index.html
@@ -62,46 +62,52 @@
       </div>
     </nav>
 
-    <header class="hero">
-    <!-- Floating background shapes -->
-    <div class="shape"></div>
-    <div class="shape"></div>
-    <div class="shape"></div>
-    
-    <div class="hero-content">
-      <h1 data-aos="fade-right" data-aos-duration="1200">Jordan Martin</h1>
-      <div class="typewriter-container" data-aos="fade-right" data-aos-duration="1200" data-aos-delay="300">
-        <h2 class="fw-light">I'm <span class="typewriter"></span></h2>
+    <header class="hero hero-v2">
+      <div class="hero-overlay"></div>
+
+      <div class="container">
+        <div class="hero-content">
+          <p class="hero-identity">
+            <span class="hero-name">Jordan Martin</span>
+            <span class="hero-sep">•</span>
+            <span>Senior @ Drake University</span>
+            <span class="hero-sep">•</span>
+            <span class="hero-availability"><span class="hero-dot"></span>Open to freelance + FT (Summer 2026)</span>
+          </p>
+          <p class="hero-eyebrow">Software Engineer · Freelance Developer</p>
+
+          <h1 class="hero-title">
+            I build production-ready software<br />
+            that ships.
+          </h1>
+
+          <p class="hero-subtitle">
+            From web platforms to automation and applied AI — I turn messy requirements into clean, reliable systems.
+          </p>
+
+          <div class="hero-actions">
+            <a href="#work" class="btn btn-primary btn-glow">View Work</a>
+            <a href="#contact" class="btn btn-outline-light">Contact</a>
+          </div>
+
+          <div class="hero-trust">
+            <div class="trust-item">
+              <i class="fas fa-briefcase"></i>
+              <span>Client work in production</span>
+            </div>
+            <div class="trust-item">
+              <i class="fas fa-plug"></i>
+              <span>API integrations & automation</span>
+            </div>
+            <div class="trust-item">
+              <i class="fas fa-shield-alt"></i>
+              <span>Reliability + logging-first builds</span>
+            </div>
+          </div>
+        </div>
       </div>
-      <p class="lead mt-4" data-aos="fade-right" data-aos-duration="1200" data-aos-delay="500">
-        Software Engineer | Freelance Developer
-      </p>
-      <div class="highlight-box">
-        <p class="elevator-pitch">
-          Senior at Drake University. I design and build production-grade software — from AI-powered systems to web platforms — with a focus on reliability, clarity, and real-world impact.
-        </p>
-      </div>
-      <div class="btn-group mt-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="800">
-        <a href="#work" class="btn btn-primary btn-glow">View Selected Work</a>
-        <a href="images/2026resume.pdf" target="_blank" class="btn btn-outline-light">View Resume</a>
-      </div>
-      <div class="social-icons" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1000">
-        <a href="https://github.com/jrdnmartin" target="_blank" title="GitHub" class="icon-hover">
-          <i class="fab fa-github"></i>
-        </a>
-        <a href="https://www.linkedin.com/in/jrdnmartin" target="_blank" title="LinkedIn" class="icon-hover">
-          <i class="fab fa-linkedin"></i>
-        </a>
-      </div>
-    </div>
-    
-    <div class="scroll-indicator">
-      <div class="mouse">
-        <div class="wheel"></div>
-      </div>
-      <p>Scroll Down</p>
-    </div>
-  </header>
+    </header>
+
 
     <!-- <div class="alert alert-primary text-center my-0" role="alert" style="border-radius:0;">
       Need a website for your business or project?
@@ -136,7 +142,7 @@
           </p>
 
           <div class="about-cta">
-            <a href="#projects" class="btn btn-primary btn-glow">View Work</a>
+            <a href="#work" class="btn btn-primary btn-glow">View Work</a>
             <a href="#contact" class="btn btn-outline-light">Work With Me</a>
           </div>
 
