--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" 
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Instrument+Sans:wght@400;500;600;700&family=Source+Serif+4:wght@500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link href="css/styles.css" rel="stylesheet" />
 
@@ -58,6 +64,12 @@
               <a class="nav-link" href="#contact">Contact</a>
             </li>
           </ul>
+          <div class="navbar-actions ms-lg-3">
+            <button class="theme-toggle" type="button" aria-label="Toggle color theme" aria-pressed="false">
+              <i class="fas fa-moon theme-icon" aria-hidden="true"></i>
+              <span class="theme-label">Dark</span>
+            </button>
+          </div>
         </div>
       </div>
     </nav>
@@ -114,7 +126,7 @@
       <a href="freelance/" class="fw-bold text-decoration-underline">Hire me for freelance web development!</a>
     </div> -->
 
-    <section id="about" class="about about-v2">
+    <section id="about" class="about about-v2 section-divider">
   <div class="container position-relative">
     <div class="text-center mb-5">
       <h2 class="mb-2">About</h2>
@@ -192,7 +204,7 @@
   </div>
 </section>
 
- <section id="skills" class="skills-section skills-v2 py-5">
+ <section id="skills" class="skills-section skills-v2 py-5 section-divider">
   <div class="container">
     <div class="text-center mb-5">
       <h2 class="mb-2">Skills</h2>
@@ -344,7 +356,7 @@
 </section>
 
 
- <section id="work" class="work-section py-5">
+ <section id="work" class="work-section py-5 section-divider">
   <div class="container">
     <div class="text-center mb-5">
       <h2 class="mb-2 work-heading">Selected Work</h2>
@@ -499,7 +511,7 @@
 
 
 
-  <section id="contact" class="contact-section contact-v2 py-5">
+  <section id="contact" class="contact-section contact-v2 py-5 section-divider">
   <div class="container">
     <div class="text-center mb-5">
       <h2 class="mb-2">Contact</h2>
@@ -600,6 +612,7 @@
         <p>&copy; 2026 Jordan Martin. All rights reserved.</p>
       </div>
     </footer>
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script src="js/scripts.js"></script>
