--- a/work/restaurant-vision/index.html
+++ b/work/restaurant-vision/index.html
@@ -13,6 +13,12 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Instrument+Sans:wght@400;500;600;700&family=Source+Serif+4:wght@500;600;700&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Your existing stylesheet -->
     <link href="/css/styles.css" rel="stylesheet" />
@@ -45,6 +51,12 @@
               <a class="nav-link" href="/#contact">Contact</a>
             </li>
           </ul>
+          <div class="navbar-actions ms-lg-3">
+            <button class="theme-toggle" type="button" aria-label="Toggle color theme" aria-pressed="false">
+              <i class="fas fa-moon theme-icon" aria-hidden="true"></i>
+              <span class="theme-label">Dark</span>
+            </button>
+          </div>
         </div>
       </div>
     </nav>
@@ -233,5 +245,7 @@
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/js/scripts.js"></script>
   </body>
 </html>
