--- a/index.html
+++ b/index.html
@@ -89,12 +89,11 @@
           <p class="hero-eyebrow">Software Engineer · Freelance Developer</p>
 
           <h1 class="hero-title">
-            I build production-ready software<br />
-            that ships.
+            I build reliable software for real-world use.
           </h1>
 
           <p class="hero-subtitle">
-            From web platforms to automation and applied AI — I turn messy requirements into clean, reliable systems.
+            I work across web platforms, integrations, and applied systems — turning unclear requirements into software that’s reliable, understandable, and usable in production.
           </p>
 
           <div class="hero-actions">
@@ -105,26 +104,20 @@
           <div class="hero-trust">
             <div class="trust-item">
               <i class="fas fa-briefcase"></i>
-              <span>Client work in production</span>
+              <span>Production systems used by real clients</span>
             </div>
             <div class="trust-item">
               <i class="fas fa-plug"></i>
-              <span>API integrations & automation</span>
+              <span>Integrations and workflow automation</span>
             </div>
             <div class="trust-item">
               <i class="fas fa-shield-alt"></i>
-              <span>Reliability + logging-first builds</span>
+              <span>Built with debugging and handoff in mind</span>
             </div>
           </div>
         </div>
       </div>
     </header>
-
-
-    <!-- <div class="alert alert-primary text-center my-0" role="alert" style="border-radius:0;">
-      Need a website for your business or project?
-      <a href="freelance/" class="fw-bold text-decoration-underline">Hire me for freelance web development!</a>
-    </div> -->
 
     <section id="about" class="about about-v2 section-divider">
   <div class="container position-relative">
@@ -140,17 +133,17 @@
           <p class="about-eyebrow">Software Engineer · Freelance Developer</p>
 
           <h3 class="about-title">
-            I build production-ready software that solves real problems — and I ship.
+            I focus on building software that’s clear, reliable, and easy to work with.
           </h3>
 
           <p class="about-text">
-            I’m a senior at Drake University, but most of my recent work has looked like real-world engineering:
-            integrating APIs, improving reliability, tightening UX flows, and building systems that hold up in production.
+            I’m a senior at Drake University, but most of my recent experience looks less like coursework and more like real 
+            engineering work — integrating APIs, debugging production issues, refining UX flows, and maintaining systems over time.
           </p>
 
           <p class="about-text">
-            My sweet spot is taking messy requirements and turning them into clear, maintainable software — whether that’s
-            a client platform, an automation pipeline, or an internal tool that saves time.
+            I’m especially comfortable working from incomplete or messy requirements and turning them into software that’s 
+            maintainable, documented, and straightforward for others to work with.
           </p>
 
           <div class="about-cta">
@@ -193,7 +186,7 @@
           <div class="proof-icon"><i class="fas fa-bullseye"></i></div>
           <h4>How I work</h4>
           <p>
-            Fast iteration, clean handoffs, and “debuggable-by-design” systems that don’t fall apart under edge cases.
+            I iterate quickly, document decisions, and build systems that are easy to debug when something inevitably breaks.
           </p>
           <div class="proof-tags">
             <span>Ship</span><span>Document</span><span>Measure</span><span>Improve</span>
@@ -210,7 +203,7 @@
       <h2 class="mb-2">Skills</h2>
       <div class="heading-underline"></div>
       <p class="text-muted mt-3 skills-subtitle mx-auto">
-        A practical snapshot of what I’m strong at — optimized for shipping production software (full-time or freelance).
+        A snapshot of the skills I rely on most when building and maintaining production software.
       </p>
     </div>
 
